<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="application.meusprojetos.com.horadoremedio.EditarActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/edit_text_nome_medicamento"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nome_med_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_text_consumir"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/diminuir_horas_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:textColor="@color/editarButtonColor"
        android:background="@drawable/button_background"
        android:text="-"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/horas_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_inteiro_default"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintLeft_toRightOf="@+id/diminuir_horas_button"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/aumentar_horas_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="+"
        android:textColor="@color/editarButtonColor"
        android:background="@drawable/button_background"
        app:layout_constraintLeft_toRightOf="@+id/horas_textview"
        android:layout_marginLeft="8dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/texto_hora"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintLeft_toRightOf="@+id/aumentar_horas_button" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_durante"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/diminuir_dias_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="-"
        android:textColor="@color/editarButtonColor"
        android:background="@drawable/button_background"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/textView6" />

    <TextView
        android:id="@+id/dias_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_inteiro_default"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/diminuir_dias_button"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/aumentar_dias_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="+"
        android:textColor="@color/editarButtonColor"
        android:background="@drawable/button_background"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/dias_textview"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/texto_dias"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/aumentar_dias_button"
        android:layout_marginLeft="8dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/texto_primeiro_medicmanto_as"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/primeiro_medicamento_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/texto_00_00_horas"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@+id/textView" />

    <Button
        android:id="@+id/definir_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/editarButtonColor"
        android:background="@drawable/button_background"
        android:text="@string/botao_definir"
        app:layout_constraintLeft_toLeftOf="@+id/primeiro_medicamento_textview"
        app:layout_constraintTop_toBottomOf="@+id/primeiro_medicamento_textview" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:text="@string/texto_hora"
        android:textAppearance="@android:style/TextAppearance.Medium"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintLeft_toRightOf="@+id/primeiro_medicamento_textview" />


</android.support.constraint.ConstraintLayout>
